--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,70 +62,12 @@ jobs:
           npm install @react-native-community/cli --save-dev
           npx react-native --version
       
-      - name: Create native_modules.gradle file
+      - name: Verify native_modules.gradle exists
         working-directory: ${{ env.WORK_DIR }}
         run: |
-          mkdir -p node_modules/@react-native-community/cli-platform-android
-          cat > node_modules/@react-native-community/cli-platform-android/native_modules.gradle << 'EOF'
-import groovy.json.JsonSlurper
-
-def reactNativePackages = new JsonSlurper().parse(file("../../../package.json")).dependencies
-def packageResolvers = []
-
-def registerPackage(packageResolver) {
-    packageResolvers.add(packageResolver)
-}
-
-def configureProjects() {
-    def reactProjects = []
-    packageResolvers.each { packageResolver ->
-        reactProjects.addAll(packageResolver())
-    }
-    return reactProjects
-}
-
-def findNodeModulePath() {
-    def baseDirFile = file("../")
-    if (baseDirFile.exists()) {
-        return baseDirFile.toString()
-    }
-    return "../"
-}
-
-def applyNativeModulesSettings(Settings settings) {
-    settings.gradle.beforeProject { project ->
-        project.configurations.all {
-            resolutionStrategy {
-                force "com.facebook.react:react-native:${reactNativePackages["react-native"]}"
-            }
-        }
-    }
-    configureProjects().forEach { reactProject ->
-        def modulePath = "${findNodeModulePath()}${reactProject.name}"
-        if (file(modulePath).exists()) {
-            settings.include(":${reactProject.name}")
-            settings.project(":${reactProject.name}").projectDir = file(modulePath)
-        }
-    }
-}
-
-def applyNativeModulesAppBuildGradle(Project project) {
-    def reactProjects = configureProjects()
-    reactProjects.forEach { reactProject ->
-        def modulePath = "${findNodeModulePath()}${reactProject.name}"
-        if (file(modulePath).exists()) {
-            project.dependencies {
-                if (reactProject.implementation) {
-                    implementation project(path: ":${reactProject.name}")
-                }
-            }
-        }
-    }
-}
-
-ext.applyNativeModulesSettings = this.&applyNativeModulesSettings
-ext.applyNativeModulesAppBuildGradle = this.&applyNativeModulesAppBuildGradle
-EOF
+          if [ ! -f node_modules/@react-native-community/cli-platform-android/native_modules.gradle ]; then
+            echo "native_modules.gradle not found after npm install. Exiting." && exit 1
+          fi
 
       - name: Create local.properties
         working-directory: ${{ env.WORK_DIR }}/android
