--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,7 @@ jobs:
       - name: Checkout required dependencies
         working-directory: ${{ env.WORK_DIR }}
         run: |
-          git clone https://github.com/telon-org/react-native-tele.git || echo "react-native-tele already exists"
-          git clone https://github.com/telon-org/react-native-sip2.git || echo "react-native-sip2 already exists"
-          git clone https://github.com/telon-org/react-native-replace-dialer.git || echo "react-native-replace-dialer already exists"
+          git clone https://github.com/telon-org/react-native-replace-dialer.git
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
